--- a/frontend/views/clientes/formularioModalRequerimiento.html
+++ b/frontend/views/clientes/formularioModalRequerimiento.html
@@ -3,7 +3,7 @@
 <body>  
   <div class="overlay"/>  
   <div class="modal" style="overflow-y: auto; max-height:400px; max-width:600px; margin: auto;">	
-	<button class="cotizaciones" style="color: white;font-weight: bold;float: right;" ng-click="cerrarModal()">Cerrar
+	<button class="cotizaciones" style="color: white;font-weight: bold;float: right;width:5em;" ng-click="cerrarModal()">Cerrar
 	</button>	 
 	<p>&nbsp;</p> 
 	<p>&nbsp;</p>    
