--- a/frontend/views/inmuebles/formularioModalImagenes.html
+++ b/frontend/views/inmuebles/formularioModalImagenes.html
@@ -1,6 +1,6 @@
 <div class="overlay"/>
-<div class="modal">
-	<button class="cotizaciones" style="color: white;font-weight: bold;float: right;" ng-click="cerrarModal()">Cerrar
+<div class="modal" style="overflow-y: auto; margin: auto;">
+	<button class="cotizaciones" style="color: white;font-weight: bold;float: right;width:5em;" ng-click="cerrarModal()">Cerrar
 	</button>	
 	<center>	
 	<div style="position: absolute;top: 5%;left: 0;right: 0;bottom: 0;margin: auto;">
