--- a/frontend/views/inmuebles/formularioModalInfoAdicInmueble.html
+++ b/frontend/views/inmuebles/formularioModalInfoAdicInmueble.html
@@ -32,7 +32,7 @@
         {{lista_clientes_prop.query}}<br ng-if="lista_clientes_prop.query!=''" />
         {{lista_clientes_prop.comment}}<br ng-if="lista_clientes_prop.comment!=''" />
         Asesor(a): {{lista_clientes_prop.usuario}}<br />
-        <a href="#">Cambiar informaci&oacute;n cliente</a>
+        <a href="#" ng-click="verInformacionClienteInmueble(lista_clientes_prop)">Cambiar informaci&oacute;n cliente</a>
         </p>
     </div>   
     
