--- a/frontend/views/menuPrincipal/formularioMenu1.html
+++ b/frontend/views/menuPrincipal/formularioMenu1.html
@@ -48,7 +48,7 @@
       <center>
         <button class="cotizaciones" style="width:15em;" ng-click="showSolicitudesIndex()">Solicitudes</button><br /><br />
         <button class="productos" style="width:15em;" ng-click="showClientsIndex()">Clientes</button><br /><br />
-        <button class="cotizaciones" style="width:15em;" ng-click="showInmueblesIndex()">Inmuebles</button><br /><br />       
+        <button class="cotizaciones" style="width:15em;" ng-click="showInmueblesAdmIndex()">Inmuebles</button><br /><br />       
         <button class="productos" style="width:15em;" ng-click="showAdministracionIndex()">Administraci&oacute;n</button>
       </center>
     </form>
